--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "http-status": "^1.5.3",
+    "joi": "^17.7.0",
     "mongoose": "^6.8.0"
   },
   "devDependencies": {
